--- a/src/index.css
+++ b/src/index.css
@@ -13,26 +13,30 @@ code {
 }
 
 .header {
-  min-height: 3.5em;
+  min-height: 60px;
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 0px 1em;
   box-sizing: border-box;
   background-color: rgb(186, 15, 21);
   position: relative;
   z-index: 4;
   img {
-    width: 100%;
-    max-height: 66px;
-    max-width: 1440px;
+    width: auto;
+    height: 40px;
+    @media all and (max-width: 500px) {
+      height: 30px;
+    }
   }
 }
 
 .footer {
   background: #141414;
-  img {
-    width: 100%;
-    max-width: 1440px;
-  }
+  color: #fff;
+  min-height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
