--- a/docs/style.css
+++ b/docs/style.css
@@ -47,7 +47,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/64d5f06ee726edd58ca3.woff2) format('woff2'), url(/0e11b62db931f85340d4.woff) format('woff');
+  src: url(./64d5f06ee726edd58ca3.woff2) format('woff2'), url(./0e11b62db931f85340d4.woff) format('woff');
   unicode-range: U+0900-097F,U+1CD0-1CF9,U+200C-200D,U+20A8,U+20B9,U+25CC,U+A830-A839,U+A8E0-A8FF;
 }
 
@@ -57,7 +57,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/4f38b4331448d2313adc.woff2) format('woff2'), url(/8cc52669c8e8a6735699.woff) format('woff');
+  src: url(./4f38b4331448d2313adc.woff2) format('woff2'), url(./8cc52669c8e8a6735699.woff) format('woff');
   unicode-range: U+0100-02AF,U+0304,U+0308,U+0329,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
 
@@ -67,7 +67,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/405055dd680fa1dcdfa2.woff2) format('woff2'), url(/cda9c93f49237f11c766.woff) format('woff');
+  src: url(./405055dd680fa1dcdfa2.woff2) format('woff2'), url(./cda9c93f49237f11c766.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 /* poppins-devanagari-500-normal */
@@ -76,7 +76,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 500;
-  src: url(/f43b6ebf46ee6fba0555.woff2) format('woff2'), url(/f681eaa0ad0df351e7db.woff) format('woff');
+  src: url(./f43b6ebf46ee6fba0555.woff2) format('woff2'), url(./f681eaa0ad0df351e7db.woff) format('woff');
   unicode-range: U+0900-097F,U+1CD0-1CF9,U+200C-200D,U+20A8,U+20B9,U+25CC,U+A830-A839,U+A8E0-A8FF;
 }
 
@@ -86,7 +86,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 500;
-  src: url(/b59bcdf2f050e663ca29.woff2) format('woff2'), url(/314dd5d635ca07f31768.woff) format('woff');
+  src: url(./b59bcdf2f050e663ca29.woff2) format('woff2'), url(./314dd5d635ca07f31768.woff) format('woff');
   unicode-range: U+0100-02AF,U+0304,U+0308,U+0329,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
 
@@ -96,7 +96,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 500;
-  src: url(/08491d3f7fe7ae88ef44.woff2) format('woff2'), url(/1df741eb9a4ccdba01d2.woff) format('woff');
+  src: url(./08491d3f7fe7ae88ef44.woff2) format('woff2'), url(./1df741eb9a4ccdba01d2.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 /* poppins-devanagari-600-normal */
@@ -105,7 +105,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 600;
-  src: url(/3343afa6b8c01e48a23b.woff2) format('woff2'), url(/ae9c1f88ace17d23e8e6.woff) format('woff');
+  src: url(./3343afa6b8c01e48a23b.woff2) format('woff2'), url(./ae9c1f88ace17d23e8e6.woff) format('woff');
   unicode-range: U+0900-097F,U+1CD0-1CF9,U+200C-200D,U+20A8,U+20B9,U+25CC,U+A830-A839,U+A8E0-A8FF;
 }
 
@@ -115,7 +115,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 600;
-  src: url(/d08f0891e438248ce419.woff2) format('woff2'), url(/7d2be7f30f5bef3a1850.woff) format('woff');
+  src: url(./d08f0891e438248ce419.woff2) format('woff2'), url(./7d2be7f30f5bef3a1850.woff) format('woff');
   unicode-range: U+0100-02AF,U+0304,U+0308,U+0329,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
 
@@ -125,7 +125,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 600;
-  src: url(/91145014c0350c248ed2.woff2) format('woff2'), url(/70e04c856f46aa529052.woff) format('woff');
+  src: url(./91145014c0350c248ed2.woff2) format('woff2'), url(./70e04c856f46aa529052.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 /* poppins-devanagari-700-normal */
@@ -134,7 +134,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/349ed9fa39221b45ae9a.woff2) format('woff2'), url(/0ea53bd19b062bb4b1a0.woff) format('woff');
+  src: url(./349ed9fa39221b45ae9a.woff2) format('woff2'), url(./0ea53bd19b062bb4b1a0.woff) format('woff');
   unicode-range: U+0900-097F,U+1CD0-1CF9,U+200C-200D,U+20A8,U+20B9,U+25CC,U+A830-A839,U+A8E0-A8FF;
 }
 
@@ -144,7 +144,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/63d2a69665d58b22ceea.woff2) format('woff2'), url(/397c3ee5845a1898f4aa.woff) format('woff');
+  src: url(./63d2a69665d58b22ceea.woff2) format('woff2'), url(./397c3ee5845a1898f4aa.woff) format('woff');
   unicode-range: U+0100-02AF,U+0304,U+0308,U+0329,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
 }
 
@@ -154,7 +154,7 @@ code {
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/d86662fe776dae29ea78.woff2) format('woff2'), url(/9cfbb32450c2f97b3722.woff) format('woff');
+  src: url(./d86662fe776dae29ea78.woff2) format('woff2'), url(./9cfbb32450c2f97b3722.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 *{margin:0;padding:0;outline:0px;box-sizing:border-box}html,body{-webkit-text-size-adjust:none}body{font-family:Poppins,sans-serif !important;min-width:240px;line-height:1;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}article,section{display:block}section:after,header:after,footer:after{content:"";display:table;clear:both}a{outline:none}a img{outline:none}img{border:0}ul,ol{margin-left:0px}html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:"";content:none}b,strong{font-weight:700}i,em{font-style:italic}table{border-collapse:collapse;border-spacing:0}button{appearance:none;border:0;background-color:rgba(0,0,0,0)}input::-webkit-outer-spin-button,input::-webkit-inner-spin-button{-webkit-appearance:none;margin:0}input[type=number]{-moz-appearance:textfield}input[type=date]::-webkit-datetime-edit{color:"#606060" !important}.rc-slider-disabled{background-color:rgba(0,0,0,0) !important}.rc-slider-handle:after{content:"";position:absolute;left:-14px;top:-15px;width:40px;height:40px;border-radius:50px;z-index:9999999}.rc-slider-mark-text{pointer-events:none}.flatpickr-calendar{background-color:#2b2b2b !important;color:#fff !important;border-radius:16px !important;box-shadow:0px 0px 0px !important}.flatpickr-calendar .flatpickr-weekday{color:#f5f5f5 !important}.flatpickr-calendar .flatpickr-day{color:#cacaca !important;font-weight:600 !important}.flatpickr-calendar .flatpickr-day.selected,.flatpickr-calendar .flatpickr-day:hover{background:#c4d600 !important;border-color:#c4d600 !important;color:#101010 !important}.flatpickr-calendar .flatpickr-month{color:#fff !important}.flatpickr-calendar .flatpickr-months svg{color:#cacaca !important;fill:#cacaca !important}.MuiPaper-root{background-color:#2b2b2b !important;border-radius:16px !important;overflow:hidden}.MuiInputLabel-formControl{pointer-events:none !important;transform:translate(15px, 9px) !important;color:#747474 !important}.MuiFormLabel-filled{display:none !important}.MuiTypography-overline,.MuiTypography-h4{color:#fff !important}.MuiPickersToolbar-penIconButton,.MuiTypography-overline{display:none !important}.MuiDatePickerToolbar-root{border:0px !important}.MuiButtonBase-root{color:#c4d600 !important}.MuiCalendarPicker-root{background-color:#2b2b2b !important;color:#fff !important}.MuiCalendarPicker-root .Mui-selected{background-color:#c4d600 !important;color:#101010 !important}.MuiCalendarPicker-root .MuiPickersDay-root{background-color:rgba(0,0,0,0) !important}.MuiCalendarPicker-root .MuiPickersDay-root.Mui-selected{background-color:#c4d600 !important;color:#101010 !important}.MuiCalendarPicker-root .MuiButtonBase-root,.MuiCalendarPicker-root .MuiTypography-caption{color:#fff !important}.MuiCalendarPicker-root .MuiSvgIcon-root path{fill:#fff !important}
