--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,30 @@ code {
   justify-content: center;
   align-items: center;
 }
+
+.MuiButtonBase-root {
+  color: #ba0f15 !important;
+}
+.MuiCalendarPicker-root {
+  background-color: #2b2b2b !important;
+  color: #fff !important;
+  .Mui-selected {
+    background-color: #ba0f15 !important;
+  }
+  .MuiPickersDay-root {
+    background-color: transparent !important;
+    &.Mui-selected {
+      background-color: #ba0f15 !important;
+      color: #101010 !important;
+    }
+  }
+  .MuiButtonBase-root,
+  .MuiTypography-caption {
+    color: #fff !important;
+  }
+  .MuiSvgIcon-root {
+    path {
+      fill: #fff !important;
+    }
+  }
+}
