--- a/docs/style.css
+++ b/docs/style.css
@@ -25,6 +25,7 @@ code {
   z-index: 4;
   img {
     width: auto;
+    max-width: 140px;
     height: 40px;
     @media all and (max-width: 500px) {
       height: 30px;
@@ -39,6 +40,33 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.MuiButtonBase-root {
+  color: #ba0f15 !important;
+}
+.MuiCalendarPicker-root {
+  background-color: #2b2b2b !important;
+  color: #fff !important;
+  .Mui-selected {
+    background-color: #ba0f15 !important;
+  }
+  .MuiPickersDay-root {
+    background-color: transparent !important;
+    &.Mui-selected {
+      background-color: #ba0f15 !important;
+      color: #101010 !important;
+    }
+  }
+  .MuiButtonBase-root,
+  .MuiTypography-caption {
+    color: #fff !important;
+  }
+  .MuiSvgIcon-root {
+    path {
+      fill: #fff !important;
+    }
+  }
 }
 
 /* poppins-devanagari-400-normal */
@@ -157,7 +185,7 @@ code {
   src: url(/gcn-testsite/d86662fe776dae29ea78.woff2) format('woff2'), url(/gcn-testsite/9cfbb32450c2f97b3722.woff) format('woff');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
-*{margin:0;padding:0;outline:0px;box-sizing:border-box}html,body{-webkit-text-size-adjust:none}body{font-family:Poppins,sans-serif !important;min-width:240px;line-height:1;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}article,section{display:block}section:after,header:after,footer:after{content:"";display:table;clear:both}a{outline:none}a img{outline:none}img{border:0}ul,ol{margin-left:0px}html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:"";content:none}b,strong{font-weight:700}i,em{font-style:italic}table{border-collapse:collapse;border-spacing:0}button{appearance:none;border:0;background-color:rgba(0,0,0,0)}input::-webkit-outer-spin-button,input::-webkit-inner-spin-button{-webkit-appearance:none;margin:0}input[type=number]{-moz-appearance:textfield}input[type=date]::-webkit-datetime-edit{color:"#606060" !important}.rc-slider-disabled{background-color:rgba(0,0,0,0) !important}.rc-slider-handle:after{content:"";position:absolute;left:-14px;top:-15px;width:40px;height:40px;border-radius:50px;z-index:9999999}.rc-slider-mark-text{pointer-events:none}.flatpickr-calendar{background-color:#2b2b2b !important;color:#fff !important;border-radius:16px !important;box-shadow:0px 0px 0px !important}.flatpickr-calendar .flatpickr-weekday{color:#f5f5f5 !important}.flatpickr-calendar .flatpickr-day{color:#cacaca !important;font-weight:600 !important}.flatpickr-calendar .flatpickr-day.selected,.flatpickr-calendar .flatpickr-day:hover{background:#c4d600 !important;border-color:#c4d600 !important;color:#101010 !important}.flatpickr-calendar .flatpickr-month{color:#fff !important}.flatpickr-calendar .flatpickr-months svg{color:#cacaca !important;fill:#cacaca !important}.MuiPaper-root{background-color:#2b2b2b !important;border-radius:16px !important;overflow:hidden}.MuiInputLabel-formControl{pointer-events:none !important;transform:translate(15px, 9px) !important;color:#747474 !important}.MuiFormLabel-filled{display:none !important}.MuiTypography-overline,.MuiTypography-h4{color:#fff !important}.MuiPickersToolbar-penIconButton,.MuiTypography-overline{display:none !important}.MuiDatePickerToolbar-root{border:0px !important}.MuiButtonBase-root{color:#c4d600 !important}.MuiCalendarPicker-root{background-color:#2b2b2b !important;color:#fff !important}.MuiCalendarPicker-root .Mui-selected{background-color:#c4d600 !important;color:#101010 !important}.MuiCalendarPicker-root .MuiPickersDay-root{background-color:rgba(0,0,0,0) !important}.MuiCalendarPicker-root .MuiPickersDay-root.Mui-selected{background-color:#c4d600 !important;color:#101010 !important}.MuiCalendarPicker-root .MuiButtonBase-root,.MuiCalendarPicker-root .MuiTypography-caption{color:#fff !important}.MuiCalendarPicker-root .MuiSvgIcon-root path{fill:#fff !important}
+*{margin:0;padding:0;outline:0px;box-sizing:border-box}html,body{-webkit-text-size-adjust:none}body{font-family:Poppins,sans-serif !important;min-width:240px;line-height:1;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}article,section{display:block}section:after,header:after,footer:after{content:"";display:table;clear:both}a{outline:none}a img{outline:none}img{border:0}ul,ol{margin-left:0px}html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:"";content:none}b,strong{font-weight:700}i,em{font-style:italic}table{border-collapse:collapse;border-spacing:0}button{appearance:none;border:0;background-color:rgba(0,0,0,0)}input::-webkit-outer-spin-button,input::-webkit-inner-spin-button{-webkit-appearance:none;margin:0}input[type=number]{-moz-appearance:textfield}input[type=date]::-webkit-datetime-edit{color:"#606060" !important}.rc-slider-disabled{background-color:rgba(0,0,0,0) !important}.rc-slider-handle:after{content:"";position:absolute;left:-14px;top:-15px;width:40px;height:40px;border-radius:50px;z-index:9999999}.rc-slider-mark-text{pointer-events:none}.flatpickr-calendar{background-color:#2b2b2b !important;color:#fff !important;border-radius:16px !important;box-shadow:0px 0px 0px !important}.flatpickr-calendar .flatpickr-weekday{color:#f5f5f5 !important}.flatpickr-calendar .flatpickr-day{color:#cacaca !important;font-weight:600 !important}.flatpickr-calendar .flatpickr-day.selected,.flatpickr-calendar .flatpickr-day:hover{background:#c4d600 !important;border-color:#c4d600 !important;color:#101010 !important}.flatpickr-calendar .flatpickr-month{color:#fff !important}.flatpickr-calendar .flatpickr-months svg{color:#cacaca !important;fill:#cacaca !important}.MuiPaper-root{background-color:#2b2b2b !important;border-radius:16px !important;overflow:hidden}.MuiInputLabel-formControl{pointer-events:none !important;transform:translate(15px, 9px) !important;color:#747474 !important}.MuiFormLabel-filled{display:none !important}.MuiTypography-overline,.MuiTypography-h4{color:#fff !important}.MuiPickersToolbar-penIconButton,.MuiTypography-overline{display:none !important}.MuiDatePickerToolbar-root{border:0px !important}.MuiButtonBase-root{color:#ba0f15 !important}.MuiCalendarPicker-root{background-color:#2b2b2b !important;color:#fff !important}.MuiCalendarPicker-root .Mui-selected{background-color:#ba0f15 !important}.MuiCalendarPicker-root .MuiPickersDay-root{background-color:rgba(0,0,0,0) !important}.MuiCalendarPicker-root .MuiPickersDay-root.Mui-selected{background-color:#ba0f15 !important;color:#101010 !important}.MuiCalendarPicker-root .MuiButtonBase-root,.MuiCalendarPicker-root .MuiTypography-caption{color:#fff !important}.MuiCalendarPicker-root .MuiSvgIcon-root path{fill:#fff !important}
 .rc-slider {
   position: relative;
   height: 14px;
